--- a/sheet.css
+++ b/sheet.css
@@ -93,9 +93,12 @@ nav{
    }
 }
 .sec-1{
+   @media screen and (max-width:767px) {
+    margin-top: -20rem;
+   }
     .right-1{
         width: 80%;
-   
+  
     }
    
     }
